# claude-skills-repo

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  WEEKLY_SKILLS_RESEARCH.md
.cursor/: mcp.json
course-agent-system/: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
course-agent-system/agents/: base.py  curriculum_architect.py  lesson_script.py  qa.py  quiz_worksheet.py  slide_content.py
course-agent-system/config/: agents.yaml  qa.yaml
course-agent-system/docs/: adding-an-agent.md  architecture.md
course-agent-system/docs/decisions/: ADR-001-stack-selection.md  ADR-002-agent-contract.md  ADR-003-mvp-scope.md
course-agent-system/exporters/: markdown.py
course-agent-system/integrations/: llm.py
course-agent-system/prompts/: course_packaging.md  curriculum_architect.md  landing_page.md  lesson_script.md  opportunity_research.md  optimization.md  project_manager.md  publishing_prep.md  qa_content.md  qa_schema.md  quiz_worksheet.md  slide_content.md  topic_scoring.md
course-agent-system/schemas/: lesson.schema.json  outline.schema.json  qa_result.schema.json  quiz.schema.json  scored_topic.schema.json  slide.schema.json  state.schema.json  topic.schema.json
course-agent-system/tests/: test_exporter.py  test_prompts.py  test_schemas.py
course-agent-system/tests/fixtures/: sample_outline.json  sample_topic.json
course-agent-system/workflows/: mvp_pipeline.py  re_render.py  state.py
gumroad-prep/: GUMROAD-UPLOAD-RUNBOOK.md  UPLOAD-CHECKLIST.md  build_zips.ps1
ironic-ineptocracy-site/: README.md
mohr-agents/: README.md  (+1 more)
(+160 files in other folders)
