[project]
name = "course-agent-system"
version = "0.1.0"
description = "Autonomous course-creation agent system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.40.0",
  "click>=8.1.7",
  "jinja2>=3.1.4",
  "jsonschema>=4.23.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[project.scripts]
course-agent = "cli:cli"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
